header dark mode sticky logo fix when justuno banner is displaying.
Former-commit-id: 1d0d993862dd3135cba0618901a9b2b1a90d4e8a
Former-commit-id: f281de95b71ee69a016d35f40f274e390ae402d0
Former-commit-id: e31677f7d1ea55d9473299813e91ffa8c962b5d4
Former-commit-id: a062474589cc5d6c7623772b922e7456078e2118
Former-commit-id: 3593bdbac3952cb5eb9d028f3c84627bcec8727b

--- a/assets/base.css
+++ b/assets/base.css
@@ -3804,6 +3804,12 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 	font-size: 4rem;
 	font-weight: 700;
 }
+
+@media (max-width: 650px) {
+	.yc-head {
+		margin-top: 1em;
+	}
+}
 .is-empty .cart__empty-text, .is-empty .cart__warnings {
 	color: #000;
 }
